--- a/appspec.yml
+++ b/appspec.yml
@@ -55,7 +55,7 @@ permissions:
 # If you are not running any commands on the Amazon EC2 instance, then remove 
 #   the "hooks" section altogether. A blank or incomplete "hooks" section
 #   may cause associated deployments to fail.
-hooks:
+##hooks:
 # For each deployment lifecycle event, specify multiple "location" entries 
 #   if you want to run multiple scripts during that event.
 # You can specify "timeout" as the number of seconds to wait until failing the deployment 
@@ -79,46 +79,46 @@ hooks:
 # During the ApplicationStop deployment lifecycle event, run the commands 
 #   in the script specified in "location" starting from the root of the 
 #   revision's file bundle.
-  ApplicationStop:
-    - location: 
-      timeout:
-      runas:
-    - location: 
-      timeout:
-      runas: 
+##  ApplicationStop:
+##  - location: 
+##    timeout:
+##    runas:
+##  - location: 
+##    timeout:
+##    runas: 
 # During the BeforeInstall deployment lifecycle event, run the commands 
 #   in the script specified in "location".
-  BeforeInstall:
-    - location: 
-      timeout:
-      runas: 
-    - location: 
-      timeout:
-      runas:
+##  BeforeInstall:
+##  - location: 
+##    timeout:
+##    runas: 
+##  - location: 
+##    timeout:
+##    runas:
 # During the AfterInstall deployment lifecycle event, run the commands 
 #   in the script specified in "location".
-  AfterInstall:
-    - location:     
-      timeout: 
-      runas:
-    - location: 
-      timeout:
-      runas:
+##AfterInstall:
+##  - location:     
+##    timeout: 
+##    runas:
+##  - location: 
+##    timeout:
+##    runas:
 # During the ApplicationInstall deployment lifecycle event, run the commands 
 #   in the script specified in "location".
-  ApplicationStart:
-    - location:     
-      timeout: 
-      runas:
-    - location: 
-      timeout:
-      runas:
+##ApplicationStart:
+##  - location:     
+##    timeout: 
+##    runas:
+##  - location: 
+##    timeout:
+##    runas:
 # During the ValidateService deployment lifecycle event, run the commands 
 #   in the script specified in "location".
-  ValidateService:
-    - location:     
-      timeout: 
-      runas:
-    - location: 
-      timeout:
-      runas:
+##ValidateService:
+##  - location:     
+##    timeout: 
+##    runas:
+##  - location: 
+##    timeout:
+##    runas:
