--- a/appspec.yml
+++ b/appspec.yml
@@ -35,23 +35,23 @@ files:
 #   For more information, see the documentation.
 # If you are deploying to Windows Server instances,
 #   then remove the 
-#   "permissions" section altogether. A blank or incomplete "permissions"
+#   "permissions" section altogether. A blank or incomplete ##"permissions"
 #   section may cause associated deployments to fail.
-permissions:
-  - object:
-    pattern:
-    except:
-    owner:
-    group:
-    mode: 
-    acls:
-      -
-    context:
-      user:
-      type:
-      range:
-    type:
-      -
+##permissions:
+##  - object:
+##    pattern:
+##    except:
+##    owner:
+##    group:
+##    mode: 
+##    acls:
+##      -
+##    context:
+##      user:
+##      type:
+##      range:
+##    type:
+##      -
 # If you are not running any commands on the Amazon EC2 instance, then remove 
 #   the "hooks" section altogether. A blank or incomplete "hooks" section
 #   may cause associated deployments to fail.
